Agregando section container-grid

--- a/index.html
+++ b/index.html
@@ -8,18 +8,31 @@
   <title>iLogicol</title>
 </head>
 <body>
-  <nav class='navBar'>
-    <img src="src/img/Logo.jpg" alt="logo">
-    <ul class='navList'>
-      <li>¿Quienes Somos?</li>
-      <li>Cursos</li>
-      <li>Actividades</li>
-      <li>Foro</li>
+  <nav>
+    <ul class='logo'>
+      <li>
+        <img src="src/img/Logo3.jpg" alt="logo">
+      </li>
+    </ul>
+    <ul class='topNav'>
+      <li><a href='#'>¿Quiénes somos?</a>
+        <ul class='submenu'>
+          <li><a href='#'>Misión</a></li>
+          <li><a href='#'>Visión</a></li>
+          <li><a href='#'>Objetivos</a></li>
+        </ul>
+      </li>
+      <li><a href='#'>Cursos</a></li>
+      <li><a href='#'>Actividades</a></li>
+      <li><a href='#'>Foro</a></li>
     </ul>
   </nav>
-
-  <section class='content'>
-
+  <section class="container">
+    <div class="layoutImg">
+      <img src="src/img/journal-education.png" alt="journal-education">
+    </div>
+    <div class="hero"></div>
+    <div class="footer"></div>
   </section>
 </body>
 </html>
