--- a/index.html
+++ b/index.html
@@ -36,7 +36,28 @@
     </div>
     <div class="hero">
       <div class="card-1">
-        
+        <h4>Card1</h4>
+      </div>
+      <div class="cont-1">
+        <p>hola mundo1!</p>
+      </div>
+      <div class="card-2">
+        <h4>Card2</h4>
+      </div>
+      <div class="cont-2">
+        <p>Hola mundo2!</p>
+      </div>
+      <div class="card-3">
+        <h4>Card3</h4>
+      </div>
+      <div class="cont-3">
+        <p>Hola mundo3!</p>
+      </div>
+      <div class="card-4">
+      </div>
+      <div class="card-5">
+      </div>
+      <div class="card-6">
       </div>
     </div>
     <div class="footer"></div>
